[gd_scene load_steps=4 format=2]

[ext_resource path="res://Chess.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game.gd" type="Script" id=2]
[ext_resource path="res://Menu.tscn" type="PackedScene" id=3]

[node name="Game" type="Node"]
script = ExtResource( 2 )

[node name="Chess" parent="." instance=ExtResource( 1 )]

[node name="Menu" parent="." instance=ExtResource( 3 )]
margin_left = 3.0
margin_top = 139.0
margin_right = 434.0
margin_bottom = 303.0

[connection signal="choose_cpu_move" from="Menu" to="." method="_on_Menu_choose_cpu_move"]
[connection signal="choose_load_fen" from="Menu" to="." method="_on_Menu_choose_load_fen"]
[connection signal="choose_new_game" from="Menu" to="." method="_on_Menu_choose_new_game"]
